css/opensource.scss
---
---

@import "_footer";
@import "_opensource_carousel";

.opensource-content {
    background: #333 url("../img/opensource/bg-slider.jpg") no-repeat 50% 0;
    background-size: contain;
}

.opensource-box {
    border-radius: 3px;
    padding: 40px 50px;

    header {
        h2, h3, h4 {
            font-size: 2.4rem;
            margin-top: 0;
        }
    }
}

.main-grid {
    max-width: 940px;
    margin: 0 auto;
    padding: 0 1em;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;


    > section {
        margin: 1rem 0;
    }
}

.opensource-ranking-grid {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: 1rem -1rem;
    width: calc(100% + 2rem);
}

.featured-grid {
    -webkit-flex: 3;
    flex: 3;
    min-width: 320px;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: column;
    flex-flow: column;
    margin: -1rem 1rem 1rem;
}

.opensource-featured-projects {
    -webkit-order: -1;
    order: -1;
    -webkit-flex: 0 0 auto;
    flex: 0 0 auto;
    margin: 1rem;
}

.opensource-manifesto {
    background-color: #fff;

    h2 {
        text-transform: uppercase;
        font-weight: bold;
        font-size: 2.4rem;
        line-height: 1.2;
        margin: 0.75em 0 1.2em;
    }

    p {
        font-size: 1.8rem;
        line-height: 1.6;
        padding: 0 2em 1em 0;
    }
}


// featured box
.section-featured-projects-box {
    background: #fd5f46 url('/img/opensource/bg-red.jpg') no-repeat top right;
    margin: 1rem 0;

    &:last-child{
        background: #51cf8f;
        a{
            color: #333;
        }
    }

    .repo-description {
        max-width: 27rem;
        font-size: 1.8rem;
        margin-bottom: 3rem;
    }

    .star-gazers a::before {
        margin-right: 1rem;
    }
}


.section-projects-ranking {
    -webkit-flex: 2;
    flex: 2;
    min-width: 240px;
    margin: 0 1rem 2rem;
    padding-left: 30px;
    padding-right: 30px;
    background-color: #33beb9;
    counter-reset: ranking;

    header {
        color: #fff;
        text-transform: uppercase;
    }

    ol {
        list-style-type: none;
        margin: 3.5rem 0 0;
        padding: 0;
    }

    li {
        color: rgba(255,255,255,0.6);
        height: 5rem;
        position: relative;

        .project-name {
            position: absolute;
            left: 3.8rem;
            top: 0;
            right: 8rem;
            font-size: 2.2rem;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
            word-break: break-all;
        }

        &::before {
            font-size: 2.4rem;
            position: absolute;
            top: 0;
            left: 0;
            content: counter(ranking) ".";
            counter-increment: ranking;
        }

        .star-gazers {
            position: absolute;
            right: -2rem;
            top: .5rem;
            width: 9.4rem;
            a::before {
                font-size: 1.8rem;
                margin-right: 0.5rem;
            }
        }
    }

    li:nth-child(5) ~ li {
        height: 4rem;

        &::before,
        .project-name {
            font-size: 1.8rem;
        }
    }
    a {
        text-decoration: none;
        color: #fff;
    }

}

.authors-box {
    background-color: #51cf8f;
    margin: 1rem 0;

    li {
        list-style: none;
    }

    img {
        display: block;
        margin: 0 4rem 3rem 0;
        border-radius: 50%;
        width: 12.5rem;
        @media all and (min-width: 480px) {
            float: left;
        }
    }

    .opensource-author {
        header {
            margin: 0 0 1rem;
        }

        h4 {
            margin: 0;
            font-family: 'Roboto Slab', serif;
            font-weight: bold;
        }

        h5 {
            margin: 0;
            font-size: 1.4rem;
            opacity: .7;
            font-weight: normal;
        }
    }

    .author-bio {
        float: none;
        overflow: hidden;
        font-size: 1.3rem;

        p:first-child {
            margin-top: 0;
        }

        a {
            color: #000;
        }
    }
}

.opensource-all-projects {
    margin: 0 auto;
    color: #fff;

    > header {
        text-transform: uppercase;
    }

    .opensource-box {
        padding: 4rem 4rem 12rem;
        font-size: 1.8rem;
    }

    h4 {
        margin: 0 0 2rem;
        font-size: 2.4rem;
        font-weight: bold;
        line-height: 1.2;
    }

    .star-gazers,
    .repo-metadata {
        position: absolute;
        left: 4rem;
    }

    .star-gazers {
        bottom: 6rem;

        a {
            color: rgba(255, 255, 255, 0.5);

            &::before {
                color: #fff;
                margin-right: 1rem;
            }
        }
    }

    .repo-metadata {
        bottom: 2rem;
        font-size: 1.4rem;

        a {
            color: rgba(255, 255, 255, 0.5);
        }
    }
}

.more-projects-grid {
    display: flex;
    display: -webkit-flex;
    flex-flow: row wrap;
    -webkit-flex-flow: row wrap;
    justify-content: space-between;
    padding: 0;
    list-style-type: none;
    margin: 0 -1rem;
    max-width: 960px;

    > li {
        background-color: #555;
        flex: 1 1 280px;
        -webkit-flex: 1 1 280px;
        margin: 1rem;
        border-radius: 3px;
        position: relative;
    }
}

.repo-box {
    a {
        color: #fff;
        text-decoration: none;
    }
}


.section-twitter > header {
    background: #333;
}

@media all and (min-width: 320px) {
    .section-twitter > header {
        background: #545a61 url('../img/top-bg.jpg') no-repeat top center;
    }
}

.section-twitter {
    position: relative;
}

.section-twitter > header {
    padding: 3em 0 1em;
    color: #fff;
    font-weight: 300;
}

.section-twitter section {
    background-color: #f3f3f3;
    padding: 2em 0;
}

@media all and (min-width: 480px) {
    .section-twitter > header {
        font-size: 2rem;
    }
}

.star-gazers a:before {
    content: '★ ';
    font-size: 100%;
    line-height: 1;
}


.repo-metadata {
    list-style-type: none;
    padding: 0;
    margin: .8em 0;
    font-size: .85em;

    li {
        display: inline-block;
        margin-right: 1em;

        a {
            color: rgba(255,255,255,.7);
            text-decoration: underline;
        }
    }
}

